<resources>
    <string name="app_name">InvertoryManagement</string>
    <string name="action_settings">Settings</string>
    <string name="product_name">Enter Product</string>
    <string name="product_quantity">Enter Quantity</string>
    <string name="product">Product</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="seller">Seller</string>
    <string name="title_activity_product_details">ProductDetails</string>
    <string name="order">Order/Sell</string>
    <string name="only_order">Order</string>
    <string name="delete">Delete</string>
    <string name="product_detail">Product Detail</string>
    <string name="sold">Sold</string>
    <string name="purchase">Purchase</string>
    <string name="name">Name</string>
    <string name="product_seller">Enter Seller Name</string>
    <string name="product_price">Enter Price($) Per Item</string>
    <string name="text_for_populating">There are no items at this moment in the list. Go to MAIN tab to add them first</string>
    <string name="image_click_button">Click</string>
    <string name="sell_item">Sell</string>
    <string name="details">Details</string>
</resources>
